# graphboard

./: .editorconfig  .gitignore  docker-compose.dev.yml
.github/: FUNDING.yml
.github/workflows/: test.yml
client/: .gitignore  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts  windi.config.ts
client/locales/: en.yml  fr.yml
client/src/: App.vue  components.d.ts  shims.d.ts
client/src/api/: index.ts  jobs.ts
client/src/api/utils/: parser.ts
client/src/components/: AddJobButton.vue  AddJobForm.vue  Clock.vue  Footer.vue  Header.vue  JobsTable.vue  JobsTableParameters.vue  LocaleDropdown.vue  Modal.vue  TablePagination.vue  TimezoneDropdown.vue
client/src/composables/: index.ts  timezone.ts
client/src/composables/api/: index.ts  jobs.ts
client/src/layouts/: default.vue
client/src/pages/: index.vue
client/src/styles/: main.css
docker/nginx/: dev.conf
docker/scripts/: init-db.sh
server/: .rustfmt.toml  Cargo.toml  Dockerfile  ENDPOINTS.md  justfile
server/src/: config.rs  main.rs  telemetry.rs
server/src/errors/http/: mod.rs  postgres.rs  serde_qs.rs
server/src/models/: job_model.rs  mod.rs
server/src/repositories/: job_repository.rs  mod.rs
server/src/services/: job_service.rs  mod.rs
