[package]
name = "graphboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.13"
config = { version = "0.11.0", features = [] }
deadpool-postgres = { version = "0.10.1", features = ["serde", "rt_tokio_1"] }
derive_more = "0.99.16"
dotenv = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json =  "1.0.72"
postgres-protocol = "0.6.2"
tokio-postgres = { version = "0.7.5", features = ["with-serde_json-1", "with-chrono-0_4", "array-impls"] }
env_logger = "0.9.0"
chrono = { version = "0.4.19", features = ["serde"] }
mime = "0.3.16"
serde_qs = "0.8.5"
